# Gryphn

./: .gitmodules  CMakeLists.txt  README.md
projects/apis/metal/: CMakeLists.txt
projects/apis/metal/loader/: metal_command_loader.c  metal_command_loader.m  metal_device_loader.m  metal_extensions.m  metal_instance_loader.c  metal_instance_loader.m  metal_loader.h  metal_sync_loader.m
projects/apis/opengl/: CMakeLists.txt
projects/apis/opengl/loader/: opengl_commands_loader.c  opengl_device_loader.c  opengl_extensions.c  opengl_instance_loader.c  opengl_loader.h
projects/apis/vulkan/: CMakeLists.txt
projects/apis/vulkan/loader/: vulkan_command_loader.c  vulkan_device_loader.c  vulkan_extensions.c  vulkan_instance_loader.c  vulkan_loader.h  vulkan_queue_loader.c  vulkan_sync_loader.c
projects/apis/vulkan/src/: vulkan_result_converter.h
projects/core/: CMakeLists.txt  gryphn_allocators.h  gryphn_error_code.h  gryphn_extensions.h  gryphn_image_format.h  gryphn_return_code.h
projects/core/src/: gryphn_handles.h  gryphn_platform_functions.h  gryphn_rendering_api.h
projects/core/src/buffers/: gryphn_buffer.c  gryphn_buffer.h
projects/core/src/debugger/: gryphn_debugger.c  gryphn_debugger.h
projects/core/src/framebuffer/: gryphn_framebuffer.c  gryphn_framebuffer.h
projects/core/src/instance/: gryphn_debugger.c  gryphn_debugger.h  gryphn_instance.c  gryphn_instance.h
projects/core/src/output_device/: gryphn_output_device.c  gryphn_output_device.h  gryphn_physical_output_device.c  gryphn_physical_output_device.h
projects/core/src/present/: gryphn_present.c  gryphn_present.h
projects/core/src/presentation_queue/: gryphn_presentation_queue.c  gryphn_presentation_queue.h
projects/core/src/renderpass/: gryphn_render_pass.h  gryphn_render_pass_descriptor.c  gryphn_render_pass_descriptor.h
projects/core/src/shader_module/: gryphn_shader_layout.h  gryphn_shader_module.c  gryphn_shader_module.h
projects/core/src/submit/: gryphn_submit.c  gryphn_submit.h
projects/core/src/textures/: gryphn_texture.c  gryphn_texture.h
projects/core/src/uniforms/: gryphn_uniform.c  gryphn_uniform.h  gryphn_uniform_layout.h  gryphn_uniform_pool.c  gryphn_uniform_pool.h
projects/core/src/window_surface/: gryphn_surface.c  gryphn_surface.h  gryphn_surface_create_functions.c  gryphn_surface_create_functions.h
projects/extensions/: CMakeLists.txt
projects/extensions/queues/: gryphn_physcial_device_queue.h  gryphn_queue.h  gryphn_queue_present.h  gryphn_queue_submit.h  gryphn_queued_command_pool.h  queues_functions.h
projects/extensions/synchronization/: gryphn_synced_presentation_queue.c  gryphn_synced_presentation_queue.h
projects/extensions/synchronization/commands/: gryphn_sync_present.c  gryphn_sync_present.h  gryphn_sync_submit.c  gryphn_sync_submit.h
projects/extensions/synchronization/fence/: gryphn_fence.c  gryphn_fence.h
projects/extensions/synchronization/loader/: sync_functions.h
projects/extensions/synchronization/semaphore/: gryphn_semaphore.c  gryphn_semaphore.h
projects/loader/: CMakeLists.txt
projects/loader/src/: gryphn_command_functions.h  gryphn_device_functions.h  gryphn_extension_loader.c  gryphn_extension_loader.h  gryphn_instance_functions.h  gryphn_loader.c  gryphn_loader.h  gryphn_loader_helpers.h  gryphn_loader_info.h
projects/platform/: CMakeLists.txt  gryphn_platform_include.h
projects/platform/platform_linux/: gryphn_platform_linux.c  gryphn_platform_linux.h
projects/platform/platform_macos/: gryphn_platform_macos.h  gryphn_platform_macos.m
projects/platform/platform_windows/: gryphn_platform_windows.h
projects/validation_layers/allocators/: CMakeLists.txt  allocator_checker.c  allocator_checker.h
projects/validation_layers/function_loader/: CMakeLists.txt  loader_utils.h
projects/validation_layers/function_loader/extensions/: queue_functions.c  queue_functions.h  sync_functions.c  sync_functions.h
projects/validation_layers/function_loader/loader/: command_functions.c  command_functions.h  device_functions.c  function_loader.c  function_loader.h  instance_functions.c  loader_utils.h
projects/validation_layers/function_loader/src/: command_functions.c  command_functions.h  device_functions.c  device_functions.h  instance_functions.c  instance_functions.h
rendering_api/metal/: CMakeLists.txt
rendering_api/metal/depends/metal-cpp/: CMakeLists.txt
rendering_api/metal/src/bridge/: info.txt  metal_bridege.m  metal_bridege.mm  metal_bridge.h
rendering_api/metal/src/core/: framebuffer.metal  metal_instance.cpp  metal_instance.h  metal_supports.cpp
rendering_api/vulkan/: CMakeLists.txt
rendering_api/vulkan/src/: vulkan_supports.cpp
rendering_api/vulkan/src/buffers/: vulkan_buffer.c  vulkan_buffer.h
rendering_api/vulkan/src/commands/: vulkan_command.cpp  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_present.cpp  vulkan_command_submit.cpp
rendering_api/vulkan/src/debugger/: vulkan_debugger.c  vulkan_debugger.cpp  vulkan_debugger.h  vulkan_layers.cpp
rendering_api/vulkan/src/framebuffers/: vulkan_framebuffer.c  vulkan_framebuffer.cpp  vulkan_framebuffer.h
rendering_api/vulkan/src/graphics_pipeline/: vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_renderpass_frame.cpp
rendering_api/vulkan/src/instance/: vulkan_instance.c  vulkan_instance.cpp  vulkan_instance.h  vulkan_macos_bridge.h  vulkan_macos_bridge.mm  vulkan_surfance.cpp
rendering_api/vulkan/src/output_device/: vulkan_device_extensions.c  vulkan_device_extensions.h  vulkan_output_device.c  vulkan_output_device.cpp  vulkan_output_devices.h  vulkan_physical_device.c  vulkan_physical_device.cpp  vulkan_physical_device.h
rendering_api/vulkan/src/present/: vulkan_present.c
rendering_api/vulkan/src/presentation_queue/: vulkan_presentation_details.c  vulkan_presentation_details.cpp  vulkan_presentation_queue.c  vulkan_presentation_queue.cpp  vulkan_presentation_queue.h  vulkan_queue_families.h  vulkan_swapchain.h  vulkan_swapchain_support.c  vulkan_swapchain_support.h
(+433 files in other folders)
